[package]
name = "iyes_bevy_extras"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", default-features = false }
iyes_progress = { version = "0.12", optional = true }

[features]
default = [ "2d" ]
2d = [
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_sprite",
    "bevy/bevy_winit",
]

[dev-dependencies]
bevy = "0.14"
