[package]
name = "iyes_bevy_extras"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0-rc.3", default-features = false, features = [ "x11" ] }

[features]
2d = [
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_sprite",
    "bevy/bevy_winit",
]
3d = [
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
]

[dev-dependencies]
bevy = "0.15.0-rc.3"
